--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "es6-promise": "^4.2.8",
         "os": "^0.1.2",
-        "vuetify": "^2.6.13"
+        "vuetify": "^2.6.13",
+        "vuex": "^3.1.3"
     }
 }
